@@ -25,6 +25,7 @@ Changelog
  * ListBlocks now call child block `bulk_to_python` if defined (Andy Chosak)
  * Site settings are now identifiable/cachable by request as well as site (Andy Babic)
  * Added `select_related` attribute to site settings to enable more efficient fetching of foreign key values (Andy Babic)
+ * Add caching of image renditions (Tom Dyson, Tim Kamanin)
  * Fix: Added ARIA alert role to live search forms in the admin (Casper Timmers)
  * Fix: Reorder login form elements to match expected tab order (Kjartan Sverrisson)
  * Fix: Re-add 'Close Explorer' button on mobile viewports (Sævar Öfjörð Magnússon)
